fix: update env config

--- a/.env_sample
+++ b/.env_sample
@@ -1,5 +1,6 @@
-MAX_SIDEWAY_MOVE =
-SCREEN_WIDTH =
-MATRIX =
-BG_COLOR =
-DENSITY =
+MAX_SIDEWAY_MOVE =  #SỐ BƯỚC CÓ THỂ ĐI NGANG
+SCREEN_WIDTH =  #CHIỀU RỘNG MÀN HÌNH
+MATRIX =    #TẠO MA TRẬN BAO NHIÊU (NODE = SỐ HÀNG * SỐ HÀNG)
+BG_COLOR =  #MÀU Nền
+DENSITY =   #ĐỘ BAO PHỦ CỦA CHƯỚNG NGẠI VÂTRJ KHI KHỞI TẠO BẢN ĐỒ NGẪU NHIÊN
+MAX_RESTART =   #SỐ LẦN KHỞI TẠO LẠI TỐI ĐA CỦA THUẬT TOÁN RANDOM START
