fix: re config variable enviroment

--- a/.env_sample
+++ b/.env_sample
@@ -4,3 +4,4 @@ MATRIX =    #TẠO MA TRẬN BAO NHIÊU (NODE = SỐ HÀNG * SỐ HÀNG)
 BG_COLOR =  #MÀU Nền
 DENSITY =   #ĐỘ BAO PHỦ CỦA CHƯỚNG NGẠI VÂTRJ KHI KHỞI TẠO BẢN ĐỒ NGẪU NHIÊN
 MAX_RESTART =   #SỐ LẦN KHỞI TẠO LẠI TỐI ĐA CỦA THUẬT TOÁN RANDOM START
+DELAY = 75  #độ trễ của các bước (ms)
